--- a/package.json
+++ b/package.json
@@ -9,18 +9,24 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-navigation/bottom-tabs": "^6.5.11",
+    "@react-navigation/native": "^6.1.9",
+    "@react-navigation/native-stack": "^6.9.17",
     "@types/react": "~18.2.14",
-    "expo": "~49.0.8",
+    "expo": "^49.0.0",
     "expo-status-bar": "~1.6.0",
     "native-base": "^3.4.28",
     "react": "18.2.0",
     "react-native": "0.72.4",
-    "typescript": "^5.1.3",
+    "react-native-safe-area-context": "3.3.2",
+    "react-native-screens": "~3.10.1",
     "react-native-svg": "13.9.0",
-    "react-native-safe-area-context": "4.6.3"
+    "react-native-vector-icons": "^10.0.2",
+    "typescript": "^5.1.3"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "@types/react-native-vector-icons": "^6.4.17"
   },
   "private": true
 }
