--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
     "react-native-screens": "~3.10.1",
     "react-native-svg": "13.9.0",
     "react-native-vector-icons": "^10.0.2",
-    "typescript": "^5.1.3"
+    "typescript": "^5.1.3",
+    "react-native-web": "~0.19.6",
+    "@expo/webpack-config": "^19.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
