--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/webpack-config": "^19.0.0",
     "@react-native-async-storage/async-storage": "^1.18.2",
     "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/native": "^6.1.9",
@@ -23,14 +24,14 @@
     "native-base": "^3.4.28",
     "react": "18.2.0",
     "react-native": "0.72.4",
+    "react-native-base64": "^0.2.1",
     "react-native-crypto": "^2.2.0",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.10.1",
     "react-native-svg": "13.9.0",
     "react-native-vector-icons": "^10.0.2",
-    "typescript": "^5.1.3",
     "react-native-web": "~0.19.6",
-    "@expo/webpack-config": "^19.0.0"
+    "typescript": "^5.1.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
