--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@react-navigation/native-stack": "^6.9.17",
     "@types/react": "~18.2.14",
     "axios": "^1.6.2",
+    "base-64": "^1.0.0",
+    "core-js": "^3.34.0",
     "expo": "^49.0.0",
     "expo-status-bar": "~1.6.0",
     "jsonwebtoken": "^9.0.2",
@@ -35,6 +37,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@types/base-64": "^1.0.2",
     "@types/jsonwebtoken": "^9.0.5",
     "@types/react-native-vector-icons": "^6.4.17"
   },
